--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGODB_URL = "mongodb+srv://jhem11:idJPY3gNnPVahODk@cluster0.tawatma.mongodb.net/database?retryWrites=true&w=majority"
+
+ACCESS_TOKEN_SECRET = token123
+REFRESH_TOKEN_SECRET = refeshtoken123
