--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = "mongodb+srv://jhem11:idJPY3gNnPVahODk@cluster0.tawatma.mongodb.net/database?retryWrites=true&w=majority"
+MONGODB_URL = "mongodb+srv://BrightlyAdmin:bbmsarah@socialmedia.nnuntgf.mongodb.net/react_socialMedia?retryWrites=true&w=majority"
 
-ACCESS_TOKEN_SECRET = token123
-REFRESH_TOKEN_SECRET = refeshtoken123
+ACCESS_TOKEN_SECRET = Flight180
+REFRESH_TOKEN_SECRET = Flight143
